<resources>
    <string name="app_name">Tripping</string>
    <string name="new_user_register_now">New User? Register Now</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="users">Users</string>
    <string name="active_users">Online</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="age">Age</string>
    <string name="phone_number">Phone number</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="create_new_account">Create a new account</string>
    <string name="title_activity_map">MapActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="friends">Friends</string>
    <string name="groups">Groups</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>