<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MapActivity">


    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:background="@color/transparent"
        android:gravity="bottom">

    <Button
        android:id="@+id/profileButton"
        android:layout_width="0dp"
        android:layout_height="85dp"
        android:layout_weight=".25"
        android:background="@drawable/button_border"
        android:clickable="true"
        android:onClick="goToProfile"
        android:text="@string/profile"
        android:textColor="@color/colorPrimary"
        android:drawableLeft="@drawable/ic_person_input"
        />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="0dp"
        android:layout_height="85dp"
        android:layout_weight=".25"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_border"
        android:clickable="true"
        android:onClick="goToSettings"
        android:textColor="@color/colorPrimary"
        android:drawableLeft="@drawable/ic_online"
        android:text="@string/active_users" />

        <Button
            android:id="@+id/users"
            android:layout_width="0dp"
            android:layout_height="85dp"
            android:layout_weight=".25"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_border"
            android:clickable="true"
            android:onClick="goToUsers"
            android:textColor="@color/colorPrimary"
            android:drawableLeft="@drawable/ic_people"
            android:text="@string/users" />

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="0dp"
            android:layout_height="85dp"
            android:layout_weight=".25"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_border"
            android:clickable="true"
            android:onClick="goToLogin"
            android:textColor="@color/colorPrimary"
            android:drawableLeft="@drawable/ic_logout"
            android:text="@string/logout" />

    </LinearLayout>

</RelativeLayout>